feat: эндпоинты для вывода архивированых шаблонов/клиентов/сотрудников/кампаний
