# backend/docs/swagger.json
@@ -125,6 +125,25 @@
                 }
             }
         },
+        "/api/campaigns/archive": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "campaigns"
+                ],
+                "summary": "Получить все архивированные кампании",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetAllCampaignsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/campaigns/{id}": {
             "get": {
                 "produces": [
@@ -297,6 +316,25 @@
                 }
             }
         },
+        "/api/clients/archive": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "clients"
+                ],
+                "summary": "Получить всех архивированных клиентов",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetAllClientsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/clients/{id}": {
             "get": {
                 "produces": [
@@ -427,7 +465,7 @@
                 "tags": [
                     "templates"
                 ],
-                "summary": "Получить все шаблоны",
+                "summary": "Получить все не архивированные шаблоны",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -464,6 +502,25 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/dto.CreateTemplateResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/templates/archive": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "templates"
+                ],
+                "summary": "Получить все архивированные шаблоны",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GetAllTemplatesResponse"
                         }
                     }
                 }
@@ -662,9 +719,21 @@
                     "type": "integer",
                     "example": 2
                 },
+                "deleted_at": {
+                    "type": "string",
+                    "example": "2024-06-01T12:00:00Z"
+                },
+                "deleted_by": {
+                    "type": "integer",
+                    "example": 2
+                },
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "is_deleted": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "scheduled_at": {
                     "type": "string",
@@ -695,6 +764,14 @@
                     "type": "string",
                     "example": "2024-06-01T12:00:00Z"
                 },
+                "deleted_at": {
+                    "type": "string",
+                    "example": "2024-06-01T12:00:00Z"
+                },
+                "deleted_by": {
+                    "type": "integer",
+                    "example": 2
+                },
                 "email": {
                     "type": "string",
                     "example": "mirea@mail.ru"
@@ -702,6 +779,10 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "is_deleted": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "segment": {
                     "type": "string",
@@ -986,6 +1067,14 @@
                     "type": "integer",
                     "example": 18
                 },
+                "deleted_at": {
+                    "type": "string",
+                    "example": "2024-06-01T12:00:00Z"
+                },
+                "deleted_by": {
+                    "type": "integer",
+                    "example": 2
+                },
                 "html_body": {
                     "type": "string",
                     "example": "\u003ch1\u003eHello\u003c/h1\u003e"
@@ -993,6 +1082,10 @@
                 "id": {
                     "type": "integer",
                     "example": 1
+                },
+                "is_deleted": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "name": {
                     "type": "string",
