# backend/internal/models/user.go
@@ -9,6 +9,6 @@ type User struct {
     Role      string    `json:"role" db:"role"`
     CreatedAt time.Time `json:"created_at" db:"created_at"`
     IsDeleted bool     `json:"is_deleted" db:"is_deleted"`
-    DeletedAt time.Time `json:"deleted_at" db:"deleted_at"`
-    DeletedBy int64     `json:"deleted_by" db:"deleted_by"`
+    DeletedAt *time.Time `json:"deleted_at" db:"deleted_at"`
+    DeletedBy *int64     `json:"deleted_by" db:"deleted_by"`
 }
